Fixed hero layout shift. added useIsomorphicLayoutEffect.

--- a/frontend/src/components/home-page/header-main/Hero.module.scss
+++ b/frontend/src/components/home-page/header-main/Hero.module.scss
@@ -16,6 +16,7 @@ header.hero {
   background-image: url("/images/common/bg-grad.svg");
   background-color: black;
   background-size: 100% 100%;
+  min-height: var(--client-height, 100vh);
   @include staticRange(--hero-padding, 10px, 18px, $b320, $b576);
 
   @keyframes fadeInOut {
